First batch of page localizations

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -316,7 +316,7 @@
     "Liechtenstein": "Liechtenstein",
     "Lithuania": "Litouwen",
     "Load :perPage More": "Laad :perPage Meer",
-    "Log in": "Inloggen",
+    "Log In": "Inloggen",
     "Log Out": "Uitloggen",
     "Log Out Other Browser Sessions": "Uitloggen bij alle sessies",
     "Login": "Inloggen",
