Added 'no results' cases to ActieAgenda and Organisatoren

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -384,6 +384,7 @@
     "no file selected": "geen bestand geselecteerd",
     "No Increase": "Geen Verhoging",
     "No Prior Data": "Geen Voorafgaande Gegevens",
+    "No Results": "Geen resultaten",
     "No Results Found.": "Geen Resultaten Gevonden.",
     "Norfolk Island": "Min. Orde: 1set \/ Sets",
     "Northern Mariana Islands": "Verpakkingen: Houten Doos",
