--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -165,6 +165,7 @@
     "Czech Republic": "Tsjechië",
     "Côte d'Ivoire": "Ivoorkust",
     "Dashboard": "Dashboard",
+    "Dear": "Beste",
     "December": "December",
     "Decrease": "Verminderen",
     "Delete": "Verwijder",
@@ -693,7 +694,7 @@
     "Yes": "Ja",
     "You are already subscribed.": "Je bent al ingeschreven.",
     "You are currently within your free trial period. Your trial will expire on :date.": "Je maakt nu gebruik van een gratis proefabonnement. Je proefabonnement verloopt op :date.",
-    "You are receiving this email because we received a password reset request for your account.": "Je ontvangt deze e-mail omdat we een wachtwoordherstel verzoek hebben ontvangen voor je account.",
+    "You are receiving this email because we received a password reset request for your account.": "Je ontvangt deze e-mail omdat we een wachtwoordherstelverzoek hebben ontvangen voor je account.",
     "You have been invited to join the :team team!": "Je bent uitgenodigd om lid te worden van team :team!",
     "You have enabled two factor authentication.": "Je hebt twee-factor-authenticatie ingeschakeld.",
     "You have not enabled two factor authentication.": "Je hebt twee-factor-authenticatie niet ingeschakeld.",
