Added expiry on verification link in config

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -610,6 +610,7 @@
     "This file field is read-only.": "Dit bestand veld is alleen-lezen.",
     "This image": "Deze afbeelding",
     "This is a secure area of the application. Please confirm your password before continuing.": "Dit is een beveiligd gedeelte van de applicatie. Bevestig je wachtwoord voordat je doorgaat.",
+    "This link will expire in :count minutes.": "Deze link verloopt over :count minuten.",
     "This password does not match our records.": "Het wachtwoord is onbekend.",
     "This password reset link will expire in :count minutes.": "Deze link om je wachtwoord te herstellen verloopt over :count minuten.",
     "This payment was already successfully confirmed.": "Deze betaling werd al met succes bevestigd.",
