Updated terms and privacypolicy page name

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -441,6 +441,7 @@
     "Preview": "Voorvertoning",
     "Previous": "Vorige",
     "Privacy Policy": "Privacybeleid",
+    "Terms and Privacypolicy": "Voorwaarden en Privacyverklaring",
     "Profile": "Profiel",
     "Profile Information": "Profiel Informatie",
     "Puerto Rico": "Puerto Rico",
