Implemented newsletter landing and subscribe component

--- a/resources/lang/nl.json
+++ b/resources/lang/nl.json
@@ -269,6 +269,7 @@
     "If you did not create an account, no further action is required.": "Als je geen account hebt aangemaakt hoef je verder niets te doen.",
     "If you did not expect to receive an invitation to this team, you may discard this email.": "Als je geen uitnodiging voor dit team verwachtte, mag je deze mail negeren.",
     "If you did not request a password reset, no further action is required.": "Als je geen wachtwoordherstel hebt aangevraagd, hoef je verder niets te doen.",
+    "If you did not sign up for our newsletter, no further action is required.": "Als je je niet hebt aangemeld voor onze nieuwsbrief kun je deze e-mail negeren.",
     "If you do not have an account, you may create one by clicking the button below. After creating an account, you may click the invitation acceptance button in this email to accept the team invitation:": "Als je nog geen account hebt, kan je er een aanmaken door op onderstaande knop te klikken. Na het aanmaken van je account kan je op de uitnodiging in deze mail klikken om die te accepteren:",
     "If you need to add specific contact or tax information to your receipts, like your full business name, VAT identification number, or address of record, you may add it here.": "Is het nodig om specifieke contact- of BTW gegevens toe te voegen aan je facturen, zoals je volledige bedrijfsnaam, BTW-nummer, of adres, dan kan je dat hier toevoegen.",
     "If you're having trouble clicking the \":actionText\" button, copy and paste the URL below\ninto your web browser:": "Als je problemen hebt met de \":actionText\" knop, kopieer en plak de URL hieronder\nin je webbrowser:",
@@ -700,6 +701,7 @@
     "You have been invited to join the :team team!": "Je bent uitgenodigd om lid te worden van team :team!",
     "You have enabled two factor authentication.": "Je hebt twee-factor-authenticatie ingeschakeld.",
     "You have not enabled two factor authentication.": "Je hebt twee-factor-authenticatie niet ingeschakeld.",
+    "You have registered for our newsletter with this email address.": "Je hebt je met dit e-mailadres aangemeld voor onze nieuwsbrief.",
     "You may accept this invitation by clicking the button below:": "Je kunt de uitnodiging accepteren door op de volgende knop te klikken:",
     "You may cancel your subscription at any time. Once your subscription has been cancelled, you will have the option to resume the subscription until the end of your current billing cycle.": "Je kunt je abonnement op elk moment stoppen. Wanneer je abonnement is gestopt heb je de mogelijkheid het abonnement voort te zetten tot het eind van je betalingsperiode.",
     "You may delete any of your existing tokens if they are no longer needed.": "Je kunt al je bestaande tokens verwijderen als ze niet langer nodig zijn.",
